--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.17.0",
     "multer": "^2.0.2"
