--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet-csp": "^4.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.17.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6"
   }
 }
